fix wrong color ratings text

--- a/src/components/rating/cdrRating.pcss
+++ b/src/components/rating/cdrRating.pcss
@@ -85,7 +85,6 @@
     }
 
     & .cdr-rating__count {
-      color: $sys-color-rating-text-sm;
       font-size: $sys-font-redwood-dsp-20-font-size;
       line-height: $sys-font-redwood-dsp-20-line-height;
       text-align: $sys-font-redwood-dsp-20-text-align;
